AWS/projects/Asg-elb/asg-elb.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This template creates an Autoscaling behind Application Load Balancer. 
Parameters:
  VPCParameter:
    Description: Select VPC 
    Type: AWS::EC2::VPC::Id

  SubnetParameterName:
    Description: Select at least 2 Subnet 
    Type: List<AWS::EC2::Subnet::Id>

  InstanceTypeParameter:
    Description: Select Instance Type Parameter
    Type: String
    Default: t2.micro
    AllowedValues:
          - t2.micro
          - t3.micro
          - t2.nano

  KeyPairParameterName:
    Description: Selecet your keypair
    Type: AWS::EC2::KeyPair::KeyName
                     
Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-0ebfd941bbafe70c6
    us-east-2:
      AMI: ami-037774efca2da0726
    us-west-1:
      AMI: ami-047d7c33f6e7b4bc4
    us-west-2:
      AMI: ami-08d8ac128e0a1b91c
    eu-west-1:
      AMI: ami-0fed63ea358539e44
     
    
Resources:

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows SSH and HTTP # Required
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: !Ref VPCParameter
  
  MyElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups: 
        - !GetAtt MySecurityGroup.GroupId 
      Subnets: !Ref SubnetParameterName
      
  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VPCParameter

  MyListeter:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !Ref MyTargetGroup
          Type: forward
      LoadBalancerArn: !Ref MyElasticLoadBalancer
      Port: 80
      Protocol: HTTP

  MyEc2Template:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref 'AWS::Region'
          - AMI
        InstanceType: !Ref InstanceTypeParameter
        KeyName: !Ref KeyPairParameterName
        SecurityGroupIds:
          - !GetAtt MySecurityGroup.GroupId
        UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install -y httpd
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4`
          DATE_TIME=`date`
          chmod -R 777 /var/www/html
          echo "<html>
          <head>
              <title> Congratulations! You have created an instance from Launch Template</title>
          </head>
          <body>
              <h1>This web server is launched from launch template by AFK</h1>
              <p>This instance is created at <b>$DATE_TIME</b></p>
              <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
              <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
          </body>
          </html>" > /var/www/html/index.html
          systemctl start httpd
          systemctl enable httpd
  MyAutoScaling:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: 2
      LaunchTemplate:
        LaunchTemplateId: !Ref MyEc2Template
        Version: 1
      MaxSize: 4 # Required
      MinSize: 1 # Required
      TargetGroupARNs: 
        - !Ref MyTargetGroup
      VPCZoneIdentifier: !Ref SubnetParameterName

  MyCPUPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref MyAutoScaling # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 80
    
Outputs: 
  LoadBalancerDNSName:
    Description: The DNS name of ALB
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt MyElasticLoadBalancer.DNSName
